--- a/MyEducatin.csproj
+++ b/MyEducatin.csproj
@@ -20,12 +20,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+    <PackageReference Include="React.Core" Version="5.2.10" />
+    <PackageReference Include="React.Web" Version="5.2.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="SecurityConfig\" />
     <Folder Include="wwwroot\" />
+    <Folder Include="SecurityConfig\" />
   </ItemGroup>
 
 </Project>
